--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "./node_modules/.bin/webpack"
   },
   "keywords": [],
   "author": "",
@@ -24,5 +25,9 @@
     "react-router": "^2.6.1",
     "redux": "^3.5.2",
     "webpack": "^1.13.2"
-  }
+  },
+  "engines": {
+    "node": "4.1.1",
+    "npm": "2.1.x"
+  },
 }
