--- a/package.json
+++ b/package.json
@@ -1,33 +1,35 @@
 {
   "name": "BattleShip",
   "version": "1.0.0",
-  "description": "== README",
-  "main": "index.js",
+  "description": "",
+  "main": "webpack.config.js",
   "directories": {
     "test": "test"
   },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "./node_modules/.bin/webpack"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "babel-core": "^6.13.2",
+    "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
-    "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
     "flux": "^2.1.1",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
-    "react-redux": "^4.4.5",
-    "react-router": "^2.6.1",
-    "redux": "^3.5.2",
+    "react-flux": "^1.0.1",
+    "react-router": "^2.7.0",
     "webpack": "^1.13.2"
   },
-  "engines": {
-    "node": "4.1.1",
-    "npm": "2.1.x"
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mikeyharris89/BattleShip.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/mikeyharris89/BattleShip/issues"
+  },
+  "homepage": "https://github.com/mikeyharris89/BattleShip#readme"
 }
