--- a/package.json
+++ b/package.json
@@ -32,5 +32,9 @@
   "bugs": {
     "url": "https://github.com/mikeyharris89/BattleShip/issues"
   },
+  "engines": {
+    "node": "4.1.1",
+    "npm": "2.1.x"
+},
   "homepage": "https://github.com/mikeyharris89/BattleShip#readme"
 }
